--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,11 @@ edr_api_key: <EDR_API_KEY>
 intezer_api_key: <INTEZER_API_KEY>
 type: <EDR_TYPE> # options: S1
 base_address: <EDR_BASE_ADDRESS>
-ssl_verification: <SSL_VERIFICATION> # default: false
-latest_edr_alerts_limit_in_hours: <LATEST_EDR_ALERTS_LIMIT_IN_HOURS> # default = 72
-latest_analysis_limit_in_days: <LATEST-ANALYSIS-LIMIT_IN_DAYS> # default = 30
-cooldown_in_minutes: <COOLDOWN_BETWEEN_RUNS_IN_MINUTES> # default = 15
-http_timeout_in_seconds: <HTTP_TIMEOUT_IN_SECONDS> # default 60
-download_retries: <FILE_DOWNLOAD_NUM_OF_RETRIES> # default: 3
-download_timeout_in_seconds: <FILE_DOWNLOAD_TIMOUT_IN_SECONDS> # default: 10
+#ssl_verification: <SSL_VERIFICATION> # default: false
+#latest_edr_alerts_limit_in_hours: <LATEST_EDR_ALERTS_LIMIT_IN_HOURS> # default = 72
+#latest_analysis_limit_in_days: <LATEST-ANALYSIS-LIMIT_IN_DAYS> # default = 30
+#cooldown_in_minutes: <COOLDOWN_BETWEEN_RUNS_IN_MINUTES> # default = 15
+#http_timeout_in_seconds: <HTTP_TIMEOUT_IN_SECONDS> # default 60
+#download_retries: <FILE_DOWNLOAD_NUM_OF_RETRIES> # default: 3
+#download_timeout_in_seconds: <FILE_DOWNLOAD_TIMOUT_IN_SECONDS> # default: 10
 
