--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,9 @@ intezer_api_key: <INTEZER_API_KEY>
 type: <EDR_TYPE> # options: S1
 base_address: <EDR_BASE_ADDRESS>
 #ssl_verification: <SSL_VERIFICATION> # default: false
-#latest_edr_alerts_limit_in_hours: <LATEST_EDR_ALERTS_LIMIT_IN_HOURS> # default = 72
-#latest_analysis_limit_in_days: <LATEST-ANALYSIS-LIMIT_IN_DAYS> # default = 30
-#cooldown_in_minutes: <COOLDOWN_BETWEEN_RUNS_IN_MINUTES> # default = 15
+#latest_edr_alerts_limit_in_hours: <LATEST_EDR_ALERTS_LIMIT_IN_HOURS> # default = 72 - Consider Changing this the first time you run this app, to get data on older alerts.
+#latest_analysis_limit_in_days: <LATEST-ANALYSIS-LIMIT_IN_DAYS> # default = 30 - lower this for more up to date analyses, at the cost of quota consumption
+#cooldown_in_minutes: <COOLDOWN_BETWEEN_RUNS_IN_MINUTES> # default = 15 - lower this for faster iterations of the app.
 #http_timeout_in_seconds: <HTTP_TIMEOUT_IN_SECONDS> # default 60
 #download_retries: <FILE_DOWNLOAD_NUM_OF_RETRIES> # default: 3
 #download_timeout_in_seconds: <FILE_DOWNLOAD_TIMOUT_IN_SECONDS> # default: 10
