--- a/deployment-edr-connect.yaml
+++ b/deployment-edr-connect.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: edr-connect
-  namespace: <NAMESPACE>
+  
+  pace: edr
 spec:
   replicas: 1
   strategy:
@@ -18,7 +19,7 @@ spec:
       name: edr-connect
       labels:
         app: edr-connect
-        env: <ENV>
+        env: edr
     spec:
       volumes:
         - name: config-volume
